# freeesp32_ave

./: .gitignore  CMakeLists.txt  INTEGRATION_STATUS.md  README.md  README_SETUP.md  activate.sh  sdkconfig  sdkconfig.ac101  sdkconfig.es8388  sdkconfig.glasses  switch_board.sh  test_simultaneous_execution.led  test_simultaneous_fix.md  test_timing_engine.led
main/: CMakeLists.txt  Kconfig.projbuild  audio_config.h  audio_driver.c  audio_driver.h  audio_driver_ac101.c  audio_driver_es8388.c  audio_generator.c  audio_generator.h  audio_led_sync.c  audio_led_sync.h  audio_manager.c  audio_manager.h  audio_test.c  audio_test.h  bg_player.c  bg_player.h  config_parser.c  config_parser.h  esp32_audioplayer.c  isr_profiling.c  isr_profiling.h  led_matrix_example.c  led_matrix_example.h  led_strip.c  led_strip.h  lock_free_comm.c  lock_free_comm.h  memory_pool.c  memory_pool.h  timing_engine.c  timing_engine.h  wav_parser.c  wav_parser.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
plans/: precision_meditation_device_execution_plan.md
test/: 005_synthesis_extensions_test.led  006_background_audio_test.led  esp_err.h  esp_log.h  isr_baseline_soak.led  phase3_validation.led  wav_header_test.c
