idf_component_register(SRCS "esp32_audioplayer.c" "audio_manager.c" "audio_generator.c" "audio_led_sync.c" "led_strip.c" "audio_test.c" "config_parser.c" "web_server.c" "wifi_manager.c" "led_matrix_example.c" "timing_engine.c" "lock_free_comm.c" "isr_profiling.c" "memory_pool.c"
                    INCLUDE_DIRS ".")
